[package]
name = "download_web"
version = "0.1.0"
authors = ["Nicolas Iooss <nicolas.iooss_git@polytechnique.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
curl = "0.4"
error-chain = "0.12"
env_logger = "0.6"
log = {version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
